bitbucket-pipelines.yml edited online with Bitbucket

--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -7,4 +7,4 @@ pipelines:
   default:
     - step:
         script:
-          - git push --mirror git@github.com:BuleyLibrary/libguides-code.git
+          - git push --mirror git@github.com:BuleyLibrary/PrimoViews.git
